docs(ui): Troubleshooting for local/CI builds — install OpenCMIS 1.2.0-SNAPSHOT parent POM and jars; pre-install suspended nemakiware-action
Co-Authored-By: Akinori Ishii <yumioka> <akinori@sanwa-c.com>